--- a/env-vars.example
+++ b/env-vars.example
@@ -1,8 +1,8 @@
 ### Authentication details
-export TF_VAR_tenancy_ocid="<tenant OCID>"
-export TF_VAR_user_ocid="<user OCID>"
-export TF_VAR_fingerprint="<api key fingerprint>"
-export TF_VAR_private_key_path="<path/to/api/pem/file>"
+export TF_VAR_oracle_bmcs_tenancy_ocid="<tenant OCID>"
+export TF_VAR_oracle_bmcs_user_ocid="<user OCID>"
+export TF_VAR_oracle_bmcs_fingerprint="<api key fingerprint>"
+export TF_VAR_oracle_bmcs_private_key_path="<path/to/api/pem/file>"
 
 ### Compartment
 export TF_VAR_compartment_ocid="<compartment OCID>"
