1. Open bosh registry port in bastion network. 2. Added instruction to generate ssh key in README

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ keys/bosh-api-private-key.pem
 keys/bosh-api-public-key.pem
 keys/bosh-ssh.pem
 keys/bosh-ssh.pub
+keys/bosh-ssh
 terraform.tfstate
 terraform.tfstate.backup
+my-env-vars.sh
