--- a/env-vars.example
+++ b/env-vars.example
@@ -1,5 +1,5 @@
 ### Authentication details
-export TF_VAR_oracle_bmcs_tenancy_ocid="<tenant OCID>"
-export TF_VAR_oracle_bmcs_user_ocid="<user OCID>"
-export TF_VAR_oracle_bmcs_fingerprint="<api key fingerprint>"
-export TF_VAR_oracle_bmcs_private_key_path="<path/to/api/pem/file>"
+export TF_VAR_oci_tenancy_ocid="<tenant OCID>"
+export TF_VAR_oci_user_ocid="<user OCID>"
+export TF_VAR_oci_fingerprint="<api key fingerprint>"
+export TF_VAR_oci_private_key_path="<path/to/api/pem/file>"
